--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Second Website</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam beatae quisquam eveniet tempora totam ipsum sapiente quas qui asperiores magni?</p>
+
 </body>
 </html>
